// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelector Snapshots matches snapshot when loading 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      undefined,
    ]
  }
  testID="language-selector"
>
  <View
    accessibilityLabel="Change language, current: English"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EEEEEE",
        "borderColor": "#E5E5E5",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
    testID="language-selector-button"
  >
    <ActivityIndicator
      color="#237cb8"
      size="small"
      testID="language-selector-loading"
    />
  </View>
</View>
`;

exports[`LanguageSelector Snapshots matches snapshot with RTL language 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      undefined,
    ]
  }
  testID="language-selector"
>
  <View
    accessibilityLabel="Change language, current: Arabic"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EEEEEE",
        "borderColor": "#E5E5E5",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
    testID="language-selector-button"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Ubuntu-Medium",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      🌐 
      Arabic
    </Text>
  </View>
</View>
`;

exports[`LanguageSelector Snapshots matches snapshot with custom style 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      {
        "marginTop": 10,
      },
    ]
  }
  testID="language-selector"
>
  <View
    accessibilityLabel="Change language, current: English"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EEEEEE",
        "borderColor": "#E5E5E5",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
    testID="language-selector-button"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Ubuntu-Medium",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      🌐 
      English
    </Text>
  </View>
</View>
`;

exports[`LanguageSelector Snapshots matches snapshot with default props 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      undefined,
    ]
  }
  testID="language-selector"
>
  <View
    accessibilityLabel="Change language, current: English"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EEEEEE",
        "borderColor": "#E5E5E5",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
    testID="language-selector-button"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Ubuntu-Medium",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      🌐 
      English
    </Text>
  </View>
</View>
`;

exports[`LanguageSelector Snapshots matches snapshot with modal open 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      undefined,
    ]
  }
  testID="language-selector"
>
  <View
    accessibilityLabel="Change language, current: English"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EEEEEE",
        "borderColor": "#E5E5E5",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
    testID="language-selector-button"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Ubuntu-Medium",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      🌐 
      English
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    testID="language-selector-modal"
    transparent={true}
    visible={true}
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flex": 1,
          "justifyContent": "flex-end",
          "opacity": 1,
        }
      }
      testID="language-selector-modal-overlay"
    >
      <View
        style={
          {
            "backgroundColor": "white",
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "maxHeight": "80%",
            "paddingBottom": 20,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderBottomColor": "#EEEEEE",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 20,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontFamily": "Ubuntu-Medium",
                "fontSize": 18,
                "fontWeight": "500",
              }
            }
          >
            Select Language
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "padding": 4,
              }
            }
            testID="language-selector-modal-close"
          >
            <Text
              style={
                {
                  "color": "#666666",
                  "fontFamily": "Ubuntu-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                }
              }
            >
              ✕
            </Text>
          </View>
        </View>
        <RCTScrollView
          data={
            [
              {
                "code": "en",
                "name": "English",
              },
              {
                "code": "es",
                "name": "Spanish",
              },
              {
                "code": "ar",
                "name": "Arabic",
              },
            ]
          }
          getItem={[Function]}
          getItemCount={[Function]}
          keyExtractor={[Function]}
          onContentSizeChange={[Function]}
          onLayout={[Function]}
          onMomentumScrollBegin={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={0.0001}
          stickyHeaderIndices={[]}
          style={
            {
              "maxHeight": 400,
            }
          }
          viewabilityConfigCallbackPairs={[]}
        >
          <View>
            <View
              onFocusCapture={[Function]}
              onLayout={[Function]}
              style={null}
            >
              <View
                accessibilityLabel="Select English"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": true,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#F3F7FA",
                    "borderBottomColor": "#EEEEEE",
                    "borderBottomWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="language-selector-item-en"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#333333",
                        "fontFamily": "Ubuntu-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                      },
                      {
                        "color": "#1e40af",
                        "fontFamily": "Ubuntu-Medium",
                        "fontSize": 16,
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  English
                </Text>
                <Text
                  style={
                    {
                      "color": "#1e40af",
                      "fontFamily": "Ubuntu-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                    }
                  }
                >
                  ✓
                </Text>
              </View>
            </View>
            <View
              onFocusCapture={[Function]}
              onLayout={[Function]}
              style={null}
            >
              <View
                accessibilityLabel="Select Spanish"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomColor": "#EEEEEE",
                    "borderBottomWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="language-selector-item-es"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#333333",
                        "fontFamily": "Ubuntu-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                      },
                      false,
                    ]
                  }
                >
                  Spanish
                </Text>
              </View>
            </View>
            <View
              onFocusCapture={[Function]}
              onLayout={[Function]}
              style={null}
            >
              <View
                accessibilityLabel="Select Arabic"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomColor": "#EEEEEE",
                    "borderBottomWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="language-selector-item-ar"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#333333",
                        "fontFamily": "Ubuntu-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                      },
                      false,
                    ]
                  }
                >
                  Arabic
                </Text>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </Modal>
</View>
`;
